Closed Bug 543930 Opened 15 years ago Closed 15 years ago

Assertion misplaced after code additions above a disconnected #ifdefed else branch

Categories

(Core :: DOM: Navigation, defect)

defect
Not set
trivial

Tracking

()

RESOLVED FIXED

People

(Reporter: hsivonen, Assigned: hsivonen)

Details

Attachments

(1 file)

In nsHTMLDocument.cpp, the code #ifdef DEBUG else { NS_ASSERTION(mIsRegularHTML, "Hey, someone forgot to reset mIsRegularHTML!!!"); } #endif has gotten disconnected from the if it used to belong to--causing bogus assertions.
Comment on attachment 424944 [details] [diff] [review] Relocate the disconnected else branch to where it belongs FWIW, the else branch got disconnected from its if months ago, but yesterday's patch made it worse.
Attachment #424944 - Flags: review?(jfkthame) → review?(bzbarsky)
Comment on attachment 424944 [details] [diff] [review] Relocate the disconnected else branch to where it belongs Looks good.
Attachment #424944 - Flags: review?(bzbarsky) → review+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: