Bug 543930 - Assertion misplaced after code additions above a disconnected #ifdefed else branch. r=bzbarsky.